# egis_module

./: CMakeLists.txt  Kconfig
boards/: CMakeLists.txt
boards/egis/egis_et171/: CMakeLists.txt  Kconfig.defconfig  Kconfig.egis_et171  board.c
drivers/: CMakeLists.txt
drivers/clock_control/: CMakeLists.txt  Kconfig  Kconfig.et171  clock_control_et171.c
drivers/crypto/: CMakeLists.txt  Kconfig  Kconfig.et171  crypto_et171.c
drivers/entropy/: CMakeLists.txt  Kconfig  Kconfig.egis  entropy_egis.c
drivers/hwinfo/: CMakeLists.txt  Kconfig  Kconfig.et171  hwinfo_et171.c
drivers/pinctrl/: CMakeLists.txt  Kconfig  Kconfig.egis_et171  pinctrl_egis_et171.c
drivers/usb/: CMakeLists.txt  Kconfig
drivers/usb/udc/: CMakeLists.txt  Kconfig  Kconfig.et171  udc_et171.c
dts/bindings/clock/: egis,et171-clock.yaml
dts/bindings/crypto/: egis,et171-crypto.yaml
dts/bindings/gpio/: egis_et171-ext-wdt.yaml
dts/bindings/pinctrl/: egis,et171-pinctrl.yaml
dts/bindings/rng/: egis,et171-trng.yaml
dts/bindings/usb/: egis,et171-usbd.yaml
dts/riscv/egis/: clock.dtsi  common_priv.dtsi  crypto.dtsi  pinctrl.dtsi  power.dtsi  spi.dtsi  trng.dtsi  usb.dtsi
include/zephyr/drivers/clock_control/: et171_clock_control.h
include/zephyr/dt-bindings/clock/: et171_clock.h
include/zephyr/dt-bindings/pinctrl/: egis-et171-pinctrl.h
soc/: CMakeLists.txt
soc/egis/et171/: CMakeLists.txt  Kconfig.defconfig  power.c  soc.c
zephyr/: module.yml
